fix: add --passWithNoTests flag to @slidejs/core vitest commands

--- a/packages/@slidejs/core/package.json
+++ b/packages/@slidejs/core/package.json
@@ -18,8 +18,8 @@
   "scripts": {
     "build": "vite build",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --passWithNoTests",
+    "test:watch": "vitest --passWithNoTests",
     "clean": "rm -rf dist"
   },
   "dependencies": {
