fix: update package.json scripts to match actual demo packages

--- a/package.json
+++ b/package.json
@@ -1,94 +1,90 @@
 {
-    "name": "slidejs",
-    "version": "0.0.2",
-    "description": "一个使用 DSL 构建幻灯片的开源库",
-    "private": true,
-    "workspaces": [
-        "packages/*",
-        "demos/*"
-    ],
-    "scripts": {
-        "prepare": "husky",
-        "dev": "tsx scripts/dev.ts",
-        "build": "turbo run build",
-        "lint": "turbo run lint",
-        "lint:fix": "turbo run lint:fix",
-        "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
-        "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
-        "typecheck": "turbo run typecheck",
-        "test": "turbo run test",
-        "test:watch": "turbo run test:watch",
-        "test:coverage": "turbo run test:coverage",
-        "clean": "turbo run clean",
-        "clean:all": "pnpm clean && rm -rf node_modules/.vite node_modules/.cache .turbo && pnpm store prune",
-        "clean:install": "pnpm clean:all && pnpm install",
-        "dev:vanilla": "pnpm --filter @slidejs/demo-vanilla dev",
-        "dev:vue": "pnpm --filter @slidejs/demo-vue dev",
-        "dev:react": "pnpm --filter @slidejs/demo-react dev",
-        "dev:svelte": "pnpm --filter @slidejs/demo-svelte dev",
-        "dev:slidejs": "pnpm --filter slidejs-revealjs-demo dev",
-        "dev:slidejs-swiper": "pnpm --filter slidejs-swiper-demo dev",
-        "dev:slidejs-splide": "pnpm --filter slidejs-splide-demo dev",
-        "dev:site": "pnpm --filter @slidejs/site dev",
-        "site": "pnpm --filter @slidejs/site dev",
-        "build:slidejs-revealjs": "pnpm --filter slidejs-revealjs-demo build",
-        "build:slidejs-swiper": "pnpm --filter slidejs-swiper-demo build",
-        "build:slidejs-splide": "pnpm --filter slidejs-splide-demo build",
-        "build:site": "pnpm --filter @slidejs/site build",
-        "preview:slidejs-revealjs": "pnpm --filter slidejs-revealjs-demo preview",
-        "preview:slidejs-swiper": "pnpm --filter slidejs-swiper-demo preview",
-        "preview:slidejs-splide": "pnpm --filter slidejs-splide-demo preview",
-        "preview:site": "pnpm --filter @slidejs/site preview",
-        "copy:demos": "pnpm --filter @slidejs/site copy:demos",
-        "preview:pages": "pnpm copy:demos && pnpm --filter @slidejs/site preview:pages",
-        "site:typecheck": "pnpm --filter @slidejs/site typecheck",
-        "site:lint": "pnpm --filter @slidejs/site lint",
-        "site:lint:fix": "pnpm --filter @slidejs/site lint:fix",
-        "site:test": "pnpm --filter @slidejs/site test",
-        "build:pages": "pnpm build:react && pnpm build:vue && pnpm build:svelte && pnpm build:vanilla && pnpm --filter @slidejs/site build:pages",
-        "deploy:pages": "pnpm build:pages && pnpm --filter @slidejs/site deploy:pages",
-        "release": "node scripts/publish.mjs"
-    },
-    "keywords": [
-        "slide",
-        "presentation",
-        "dsl",
-        "revealjs",
-        "swiper",
-        "splide",
-        "wsx",
-        "web-components"
-    ],
-    "author": "",
-    "license": "MIT",
-    "devDependencies": {
-        "@types/inquirer": "^9.0.7",
-        "@types/node": "^20.10.0",
-        "@typescript-eslint/eslint-plugin": "^8.49.0",
-        "@typescript-eslint/parser": "^8.49.0",
-        "@vue/eslint-config-typescript": "^14.6.0",
-        "@wsxjs/wsx-press": "^0.0.19",
-        "chalk": "^5.6.2",
-        "cross-env": "^7.0.3",
-        "eslint": "^9.39.2",
-        "eslint-plugin-svelte": "^3.13.1",
-        "eslint-plugin-vue": "^10.6.2",
-        "husky": "^9.0.11",
-        "inquirer": "^9.2.15",
-        "listr2": "^9.0.5",
-        "ora": "^8.0.1",
-        "prettier": "^3.1.0",
-        "svelte-eslint-parser": "^1.4.1",
-        "tsx": "^4.7.1",
-        "turbo": "^2.6.3",
-        "typescript": "^5.3.3",
-        "typescript-eslint": "^8.49.0",
-        "vitepress": "^1.0.0",
-        "vue-eslint-parser": "^10.2.0"
-    },
-    "packageManager": "pnpm@8.15.0",
-    "engines": {
-        "node": ">=16.0.0",
-        "pnpm": ">=8.0.0"
-    }
+  "name": "slidejs",
+  "version": "0.0.2",
+  "description": "一个使用 DSL 构建幻灯片的开源库",
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "demos/*"
+  ],
+  "scripts": {
+    "prepare": "husky",
+    "dev": "tsx scripts/dev.ts",
+    "build": "turbo run build",
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "typecheck": "turbo run typecheck",
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
+    "test:coverage": "turbo run test:coverage",
+    "clean": "turbo run clean",
+    "clean:all": "pnpm clean && rm -rf node_modules/.vite node_modules/.cache .turbo && pnpm store prune",
+    "clean:install": "pnpm clean:all && pnpm install",
+    "dev:swiper": "pnpm --filter @slidejs/demo-swiper dev",
+    "dev:splide": "pnpm --filter @slidejs/demo-splide dev",
+    "dev:revealjs": "pnpm --filter @slidejs/demo-revealjs dev",
+    "dev:site": "pnpm --filter @slidejs/site dev",
+    "site": "pnpm --filter @slidejs/site dev",
+    "build:swiper": "pnpm --filter @slidejs/demo-swiper build",
+    "build:splide": "pnpm --filter @slidejs/demo-splide build",
+    "build:revealjs": "pnpm --filter @slidejs/demo-revealjs build",
+    "build:site": "pnpm --filter @slidejs/site build",
+    "preview:swiper": "pnpm --filter @slidejs/demo-swiper preview",
+    "preview:splide": "pnpm --filter @slidejs/demo-splide preview",
+    "preview:revealjs": "pnpm --filter @slidejs/demo-revealjs preview",
+    "preview:site": "pnpm --filter @slidejs/site preview",
+    "copy:demos": "pnpm --filter @slidejs/site copy:demos",
+    "preview:pages": "pnpm copy:demos && pnpm --filter @slidejs/site preview:pages",
+    "site:typecheck": "pnpm --filter @slidejs/site typecheck",
+    "site:lint": "pnpm --filter @slidejs/site lint",
+    "site:lint:fix": "pnpm --filter @slidejs/site lint:fix",
+    "site:test": "pnpm --filter @slidejs/site test",
+    "build:pages": "pnpm build:swiper && pnpm build:splide && pnpm build:revealjs && pnpm --filter @slidejs/site build:pages",
+    "deploy:pages": "pnpm build:pages && pnpm --filter @slidejs/site deploy:pages",
+    "release": "node scripts/publish.mjs"
+  },
+  "keywords": [
+    "slide",
+    "presentation",
+    "dsl",
+    "revealjs",
+    "swiper",
+    "splide",
+    "wsx",
+    "web-components"
+  ],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@wsxjs/wsx-press": "^0.0.19",
+    "chalk": "^5.6.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.39.2",
+    "eslint-plugin-svelte": "^3.13.1",
+    "eslint-plugin-vue": "^10.6.2",
+    "husky": "^9.0.11",
+    "inquirer": "^9.2.15",
+    "listr2": "^9.0.5",
+    "ora": "^8.0.1",
+    "prettier": "^3.1.0",
+    "svelte-eslint-parser": "^1.4.1",
+    "tsx": "^4.7.1",
+    "turbo": "^2.6.3",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.49.0",
+    "vitepress": "^1.0.0",
+    "vue-eslint-parser": "^10.2.0"
+  },
+  "packageManager": "pnpm@8.15.0",
+  "engines": {
+    "node": ">=16.0.0",
+    "pnpm": ">=8.0.0"
+  }
 }
