--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -56,10 +56,9 @@ jobs:
 
       - name: Build all demos
         run: |
-          pnpm build:react
-          pnpm build:vue
-          pnpm build:svelte
-          pnpm build:vanilla
+          pnpm build:swiper
+          pnpm build:splide
+          pnpm build:revealjs
         env:
           GITHUB_PAGES: true
 
