chore: 使用 @systembug/qingniao 替换发布脚本并优化开发工具
- 使用 @systembug/qingniao 替换自定义发布脚本
- 优化 dev.ts 脚本，使用 ora 提供更好的用户体验
- 完成 RFC 0007: Runner 包 CSS 打包与自动加载
- 清理和修复 demo 包名匹配问题
- 修复 TypeScript 项目引用配置（添加 composite: true）
- 更新依赖和配置文件

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "site:test": "pnpm --filter @slidejs/site test",
     "build:pages": "pnpm build:swiper && pnpm build:splide && pnpm build:revealjs && pnpm --filter @slidejs/site build:pages",
     "deploy:pages": "pnpm build:pages && pnpm --filter @slidejs/site deploy:pages",
-    "release": "node scripts/publish.mjs"
+    "release": "qingniao"
   },
   "keywords": [
     "slide",
@@ -58,12 +58,13 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@systembug/qingniao": "^0.0.7",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
     "@vue/eslint-config-typescript": "^14.6.0",
-    "@wsxjs/wsx-press": "^0.0.19",
+    "@wsxjs/wsx-press": "^0.0.20",
     "chalk": "^5.6.2",
     "cross-env": "^7.0.3",
     "eslint": "^9.39.2",
