--- a/packages/@slidejs/runner/package.json
+++ b/packages/@slidejs/runner/package.json
@@ -14,7 +14,10 @@
   },
   "scripts": {
     "build": "vite build",
-    "dev": "vite build --watch"
+    "dev": "vite build --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@slidejs/core": "workspace:*",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "jsdom": "^24.0.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vite-plugin-dts": "^3.7.0",
