feat: 统一所有包的构建格式为 CJS 和 ESM，ESM 使用 .mjs 扩展名
- 所有包现在都生成 index.mjs (ESM) 和 index.cjs (CommonJS)
- 更新所有包的 vite.config.ts 和 package.json
- 创建 RFC 0008 跟踪统一构建格式工作
- 确保所有包都支持双格式导入，提供更好的兼容性

受影响的包:
- @slidejs/core
- @slidejs/context
- @slidejs/dsl
- @slidejs/runner
- @slidejs/runner-revealjs
- @slidejs/runner-swiper
- @slidejs/runner-splide

--- a/packages/@slidejs/context/package.json
+++ b/packages/@slidejs/context/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "description": "Slide DSL Context 接口定义",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
