--- a/packages/@slidejs/core/package.json
+++ b/packages/@slidejs/core/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@slidejs/core",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Slide DSL 核心引擎",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
