--- a/packages/@slidejs/dsl/package.json
+++ b/packages/@slidejs/dsl/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "description": "Slide DSL 语法解析器和编译器",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
