--- a/packages/@slidejs/runner/tsconfig.json
+++ b/packages/@slidejs/runner/tsconfig.json
@@ -8,8 +8,5 @@
   },
   "include": ["src/**/*"],
   "exclude": ["**/*.test.ts", "dist", "node_modules"],
-  "references": [
-    { "path": "../core" },
-    { "path": "../context" }
-  ]
+  "references": [{ "path": "../core" }, { "path": "../context" }]
 }
