chore: add publishConfig.access for all scoped packages

--- a/packages/@slidejs/core/package.json
+++ b/packages/@slidejs/core/package.json
@@ -39,5 +39,8 @@
     "presentation"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
