--- a/packages/@slidejs/dsl/package.json
+++ b/packages/@slidejs/dsl/package.json
@@ -44,5 +44,8 @@
     "presentation"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
