--- a/packages/@slidejs/context/package.json
+++ b/packages/@slidejs/context/package.json
@@ -29,6 +29,9 @@
   ],
   "author": "",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
