--- a/packages/@slidejs/runner-splide/package.json
+++ b/packages/@slidejs/runner-splide/package.json
@@ -30,5 +30,8 @@
     "vite": "^5.0.0",
     "vite-plugin-dts": "^3.7.0",
     "vitest": "^1.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
