refactor: use Vite plugin to copy 404.html instead of separate script
- Add copy404Plugin() Vite plugin that automatically copies index.html to 404.html after build
- Remove pnpm copy:404 from build:pages script (now handled by plugin)
- Plugin uses closeBundle hook to ensure it runs after all files are written
- Only executes in production builds (NODE_ENV === 'production')
- Improves build workflow by integrating 404.html generation into Vite build process

--- a/site/package.json
+++ b/site/package.json
@@ -19,7 +19,7 @@
     "copy:404": "tsx scripts/copy-404.ts",
     "lint": "eslint src --ext .ts,.wsx",
     "lint:fix": "eslint src --ext .ts,.wsx --fix",
-    "build:pages": "cross-env NODE_ENV=production GITHUB_PAGES=true CUSTOM_DOMAIN=true vite build && pnpm copy:demos && pnpm copy:404",
+    "build:pages": "cross-env NODE_ENV=production GITHUB_PAGES=true CUSTOM_DOMAIN=true vite build && pnpm copy:demos",
     "deploy:pages": "pnpm build:pages && gh-pages -d dist"
   },
   "dependencies": {
